samples/_failures_safe/1761404034_cef806_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f5d38f3.c: In function ‘main’:
./samples/SAFE/__tmp_9f5d38f3.c:168:18: error: missing terminating " character
  168 |     add_node(&g, "
      |                  ^
./samples/SAFE/__tmp_9f5d38f3.c:168:5: error: expected expression at end of input
  168 |     add_node(&g, "
      |     ^~~~~~~~
./samples/SAFE/__tmp_9f5d38f3.c:168:5: error: expected declaration or statement at end of input
